--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="about-text">
           <p>山崎  由佳里と申します。
             まず、私の強みを申し上げます。
-            私は、「個人サロンのターゲットのサイト」を、制作側の見地から見続けて研究し尽くしております。これまでに１００サイト以上を分析しており、自分が「思わず行ってみたくなった LP」「買いたくなったキャッチコピー」「思わず押してしまったバナー広告」などを資料として日常的にまとめております。個人サロンのターゲットのサイトであれば、必ずお力になれると思います。
+            私は、「治療院・個人サロンのターゲットのサイト」を、制作側の見地から見続けて研究し尽くしております。これまでに１００サイト以上を分析しており、自分が「思わず行ってみたくなった LP」「惹かれるキャッチコピー」「思わず押してしまったバナー広告」などを資料として日常的にまとめております。整骨院・鍼灸院・整体院・個人サロンのターゲットサイトであれば、必ずお力になれると思います。
             
             実は私は、今年からオンライン講座でwebサイト制作を学んだばかりです。
             とはいえ、高いレベルのカリキュラムをクリアしているので、
