--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         <div class="about-text">
           <p>山崎  由佳里と申します。
             まず、私の強みを申し上げます。
-            私は、「治療院・個人サロンのターゲットのサイト」を、制作側の見地から見続けて研究し尽くしております。これまでに１００サイト以上を分析しており、自分が「思わず行ってみたくなった LP」「惹かれるキャッチコピー」「思わず押してしまったバナー広告」などを資料として日常的にまとめております。整骨院・鍼灸院・整体院・個人サロンのターゲットサイトであれば、必ずお力になれると思います。
+            私は、特定した分野のサイトを、制作側の見地から見続けて研究し尽くしております。これまでに１００サイト以上を分析しており、
+            自分が「思わず行ってみたくなったLP」「惹かれるキャッチコピー」「思わず押してしまったバナー広告」などを資料として日常的にまとめております。
             
             実は私は、今年からオンライン講座でwebサイト制作を学んだばかりです。
             とはいえ、高いレベルのカリキュラムをクリアしているので、
@@ -92,7 +93,6 @@
             「作ったサイトがどれだけの見込み客を集め、お客様の事業の売上をどれだけアップさせられるか」という【機能的価値】が、最も重要であると考えています。
             私はそのために、デザインの勉強と並行し、SNS 集客や、マーケティングについても知見を深めています。
             まだ実績や経験は少ないのですが、「言われた通り作るだけの WEB デザイナー」で終わらず、「お客様の事業の売上にWEB サイトで貢献するために何ができるか」、「どういう WEB サイトを作ればいいか」という案を積極的に出していける WEB デザイナーでありたいと思っています。
-            ぜひご検討いただき、一度 MTG（面談）の機会をいただければ幸いです。
           </p>
         </div>
       </div>
