--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <h2>about</h2>
       <div class="container">
         <div class="about-text">
-          <p>山崎  由佳里と申します。
+          <p>Yamazaki Yukariと申します。
             まず、私の強みを申し上げます。<br>
             私は、特定した分野のサイトを、制作側の見地から見続けて研究し尽くしております。<br>
             これまでに１００サイト以上を分析しており、<br>
@@ -90,7 +90,7 @@
            実は私は、今年からオンライン講座でwebサイト制作を学んだばかりです。<br>
             とはいえ、高いレベルのカリキュラムをクリアしているので、<br>
             制作のプロとして問題ないスキルは身につけております。<br>
-            制作実績をご確認いただければ、一般的なサイトとして問題ないものを作れることはお分かりいただけると思います。<br> 
+            制作実績をご確認いただければ、一般的なサイトとして<br>問題ないものを作れることはお分かりいただけると思います。<br> 
           </p>
         </div>
         <div class="about-pic">
