--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  
+  <div class="wrap">
  <header class="header">
       <div class="header-inner">
         <p class="header-title">Yukari Yamazaki</p>
@@ -169,9 +169,9 @@
 
   </main>
 
-  <footer class="footer">
+   <footer class="footer">
       <div class="copyright">&copy;Yukari Yamazaki</div>
-  </footer>
-  
+   </footer>
+ </div>
 </body>
 </html>
