--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <h2>about</h2>
       <div class="container">
         <div class="about-text">
+        
           <p>Yamazaki Yukariと申します。
             まず、私の強みを申し上げます。<br>
             私は、特定した分野のサイトを、制作側の見地から見続けて研究し尽くしております。<br>
@@ -100,6 +101,7 @@
       </div>
       <div class="about-text2">
 
+　　　　<h1>～webサイトは制作後が本番、たいせつにしていること～</h1>
         <p>
           WEB サイトの役割については、私なりの信念があります。
           それは、WEB サイトは制作して終わりではなく、<br>
