--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             <div class="skill-body">
               <h3 class="skill-name">HTML/CSS </h3>
               <p class="skill-text">
-                書籍<br>■「HTML&CSSとWebデザイン入門講座」著者:Mana<br>オンライン講座<br>■ドットインストール 有料会員講座/Progate
+                ■書籍<br><p>HTML&CSSとWebデザイン入門講座」著者:Mana</p>
+                ■オンライン講座<br><p>ドットインストール 有料会員講座/Progate</p>
               </p>
            </div>
          </div>
@@ -132,7 +133,7 @@
           <div class="skill-body">
             <h3 class="skill-name">WordPress </h3>
             <p class="skill-text">
-              書籍<br>■「WordPress　入門講座」著者：Mana
+              ■書籍<br><p>「WordPress　入門講座」著者：Mana</p>
             </p>
           </div>
         </div>
@@ -140,7 +141,8 @@
           <div class="skill-body">
             <h3 class="skill-name">JavaScript </h3>
             <p class="skill-text">
-              書籍<br>■ドットインストール<br>オンライン講座<br>■有料会員講座/Progate
+              ■書籍<br><p>ドットインストール</p>
+              ■オンライン講座<br><p>有料会員講座/Progate</p>
             </p>
           </div>
         </div>
@@ -148,7 +150,9 @@
           <div class="skill-body">
             <h3 class="skill-name">Photoshop </h3>
             <p class="skill-text">
-              書籍<br>■phptoshop10年使える逆引き手帖<br>動画講座<br>■プロのフリーランスwebデザイナーより直接指導 </p>
+              ■書籍<br><p>phptoshop10年使える逆引き手帖</p>
+              ■photoshop講座<br><p>プロのフリーランスwebクリエイター直接指導によるバナー制作 </p>
+            </p>
           </div>
         </div>
       </div>
