--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <div class="skill-body">
               <h3 class="skill-name">HTML/CSS </h3>
               <p class="skill-text">
-                ■書籍<br><p>HTML&CSSとWebデザイン入門講座」著者:Mana</p>
-                ■オンライン講座<br><p>ドットインストール 有料会員講座/Progate</p>
+                ■書籍<br><p>「HTML&CSSとWebデザイン入門講座」著者:Mana</p>
+                ■オンライン講座<br><p>ドットインストール/有料会員講座<br>Progate</p>
               </p>
            </div>
          </div>
@@ -134,6 +134,7 @@
             <h3 class="skill-name">WordPress </h3>
             <p class="skill-text">
               ■書籍<br><p>「WordPress　入門講座」著者：Mana</p>
+              ■オンライン講座<br>Udemy：WordPress テーマ開発講座
             </p>
           </div>
         </div>
@@ -141,8 +142,9 @@
           <div class="skill-body">
             <h3 class="skill-name">JavaScript </h3>
             <p class="skill-text">
-              ■書籍<br><p>ドットインストール</p>
-              ■オンライン講座<br><p>有料会員講座/Progate</p>
+              
+              ■オンライン講座<br>ドットインストール/有料会員講座<br>Progate</p>
+              
             </p>
           </div>
         </div>
